--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "nodejs": "^0.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
